--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "animate-on-scroll": "^1.2.5",
+    "bulma": "^0.9.0",
     "react": "^16.13.1",
+    "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-stonecutter": "^0.3.10",
+    "vertical-timeline-component-for-react": "^1.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
